[gd_scene load_steps=3 format=3 uid="uid://b31du0ianq7s7"]

[ext_resource type="Script" path="res://inventory/inventory_item_slot_ui.gd" id="1_m5oof"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lqp3g"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.317647, 0.529412, 0.8, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_color = Color(0, 0, 0, 0.85098)

[node name="InventoryItemSlotUI" type="Panel"]
custom_minimum_size = Vector2(75, 75)
anchors_preset = -1
anchor_right = 0.065
anchor_bottom = 0.116
offset_right = 0.119995
offset_bottom = -0.167999
grow_horizontal = 2
pivot_offset = Vector2(37, 0)
size_flags_horizontal = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_lqp3g")
script = ExtResource("1_m5oof")

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(75, 75)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
layout_mode = 2

[node name="item_display" type="Sprite2D" parent="CenterContainer/Panel"]
position = Vector2(1.00001, 0.5)
scale = Vector2(0.331878, 0.386598)

[node name="ItemName" type="Label" parent="CenterContainer/Panel"]
custom_minimum_size = Vector2(81, 23)
layout_mode = 0
offset_left = -34.0
offset_top = -32.0
offset_right = 100.0
offset_bottom = -9.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true
